# spotify_tracker

./: Dockerfile  LICENSE  README.md  docker-compose-services.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/spotify_app/: .env  AbsTracker.py  README.MD  settings.py
app/utils/: redis_utils.py
app/worker/: celery_app.py  celery_worker.py
tests/app/spotify_app/: .app.spotify_app.AbsTracker.get_next  test_playlist_tracker.py
tests/app/utils/: test_redis_json_mappers.py
