[tool.poetry]
name = "fastapi-celery"
version = "0.1.0"
description = "Spotify app"
authors = ["Grega Vrbančič <grega.vrbancic@gmail.com>", "Mickey Perlstein <corp.mp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.8.3"
fastapi = "^0.60.1"
hypercorn = "^0.10.2"
celery = "^4.4.6"
redis = "^3.5.3"
pytest = "^6.1.2"
spotipy = "^2.16.1"
cachier = "^1.4.4"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
